# ha-battery-coordinator

./: .env.example  .gitignore  .mise.toml  AGENTS.md  Dockerfile  README.md  coordinator_cli.py  docker-compose.yml  pyproject.toml  repository.json
.github/workflows/: ci.yml
battery-coordinator/: CHANGELOG.md  Dockerfile  README.md  apparmor.txt  build.yaml  config.yaml
battery-coordinator/app/: config.py  coordinator_logic.py  device_io.py  main.py
battery-coordinator/app/brains/: __init__.py  permission_fsm.py
battery-coordinator/translations/: en.yaml
docs/: brain-design-prompt.md  system-behavior.md
tests/: test_brain_overrides.py  test_config.py  test_device_io.py  test_invariants.py  test_n_pibs.py  test_packaging.py  test_zen_sn_fetch.py
