[project]
name = "ha-addon-battery-coordinator"
version = "1.1.1"
description = "Coordinates Zendure battery with HomeWizard Plug-in Batteries for Home Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["battery-coordinator/app", "tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E/F (pycodestyle errors + pyflakes) — defaults that catch syntax/import bugs.
# I    — import sort.
# B    — bugbear: real bug patterns (mutable defaults, shadowed builtins, etc.).
# UP   — pyupgrade: keep syntax current with the project's >=3.12 floor.
# SIM  — simplify: collapse redundant if/else, dict-style refactors.
# RUF  — ruff-specific lints (subscript-vs-iterator, dataclass mistakes, etc.).
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    # Em/en-dashes are intentional throughout docstrings, comments, and a
    # couple of validate() messages — they're the project's house typography,
    # not Unicode-confusable smuggling.
    "RUF001",
    "RUF002",
    "RUF003",
]
# E402: imports after sys.path manipulation (required for app module path)
# SIM300: Yoda-condition lint flips `assert b.X == d["x"]` to put the dict
#         access on the left. The current order reads as "the brain agrees
#         with the dict" which is the test's actual intent.
per-file-ignores = {"tests/*.py" = ["E402", "SIM300"]}

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
    "ruff>=0.15.9",
]
