[project]
name = "ha-addon-battery-coordinator"
version = "1.1.1"
description = "Coordinates Zendure battery with HomeWizard Plug-in Batteries for Home Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["battery-coordinator/app", "tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E/F (pycodestyle errors + pyflakes) — defaults that catch syntax/import bugs.
# I    — import sort.
# B    — bugbear: real bug patterns (mutable defaults, shadowed builtins, etc.).
# UP   — pyupgrade: keep syntax current with the project's >=3.12 floor.
# SIM  — simplify: collapse redundant if/else, dict-style refactors.
# RUF  — ruff-specific lints (subscript-vs-iterator, dataclass mistakes, etc.).
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    # Em/en-dashes are intentional throughout docstrings, comments, and a
    # couple of validate() messages — they're the project's house typography,
    # not Unicode-confusable smuggling.
    "RUF001",
    "RUF002",
    "RUF003",
]
# E402: imports after sys.path manipulation (required for app module path)
# SIM300: Yoda-condition lint flips `assert b.X == d["x"]` to put the dict
#         access on the left. The current order reads as "the brain agrees
#         with the dict" which is the test's actual intent.
per-file-ignores = {"tests/*.py" = ["E402", "SIM300"]}

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyyaml>=6.0.3",
    "ruff>=0.15.9",
]

[tool.mypy]
python_version = "3.12"
files = ["battery-coordinator/app", "tests"]
mypy_path = ["battery-coordinator/app", "tests"]
# aiohttp ships type stubs but py3-aiohttp on alpine doesn't expose them
# in every dev environment; this is the lenient floor we ratchet from.
ignore_missing_imports = true
# Typecheck inside untyped function bodies — catches things like
# 'None + int' that hide in test helpers.
check_untyped_defs = true

[[tool.mypy.overrides]]
# test_device_io passes hand-rolled fake sessions (_FakeSession,
# _FakeMultiURLSession, _FakeStateSession, _RecordingSession) to
# production methods that take aiohttp.ClientSession. The fakes are
# duck-typed mocks by design — making them satisfy the real ClientSession
# Protocol is far more code than it's worth.
module = "tests.test_device_io"
disable_error_code = ["arg-type"]
